added hero image

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <a href="/">About</a>
       <a href="/">Support</a>
     </nav>
+    <img src="./images/TechBG_HeroImage.jpg" alt="Crypto Tech Hero Image" class="img-landing-hero">
   </body>
 </html>
