--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   </head>
   <body>
     <nav>
-      <a href="/">Branding</a>
+      <a href="/" class="nav-title">Branding</a>
       <a href="/">Products</a>
       <a href="/">About</a>
       <a href="/">Support</a>
     </nav>
-    <img src="./images/TechBG_HeroImage.jpg" alt="Crypto Tech Hero Image" class="img-landing-hero">
+    <img
+      src="./images/TechBG_HeroImage.jpg"
+      alt="Crypto Tech Hero Image"
+      class="img-landing-hero"
+    />
   </body>
 </html>
