added styling and hover effects with pseudo class

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
   </head>
   <body>
     <nav>
-      <a href="/" class="nav-title">Branding</a>
-      <a href="/">Products</a>
-      <a href="/">About</a>
-      <a href="/">Support</a>
+      <ul class="nav-links">
+        <li>
+          <a href="/" class="nav-title">Branding</a>
+        </li>
+        <li>
+          <a href="/" class="nav-link">Products</a>
+        </li>
+        <li>
+          <a href="/" class="nav-link">About</a>
+        </li>
+        <li>
+          <a href="/" class="nav-link">Support</a>
+        </li>
+      </ul>
     </nav>
     <img
       src="./images/TechBG_HeroImage.jpg"
