added flexbox to nav menu

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <nav>
+    <nav class="flexbox">
+      <a href="/" class="nav-title">Branding</a>
       <ul class="nav-links">
-        <li>
-          <a href="/" class="nav-title">Branding</a>
-        </li>
         <li>
           <a href="/" class="nav-link">Products</a>
         </li>
