Added animations css and mediaquery css

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <nav class="flexbox">
-      <a href="/" class="nav-title">Branding</a>
+      <a href="/" class="nav-title flipInX">Branding</a>
       <ul class="nav-links">
         <li>
-          <a href="/" class="nav-link">Products</a>
+          <a href="/" class="nav-link flipInX">Products</a>
         </li>
         <li>
-          <a href="/" class="nav-link">About</a>
+          <a href="/" class="nav-link flipInX">About</a>
         </li>
         <li>
-          <a href="/" class="nav-link">Support</a>
+          <a href="/" class="nav-link flipInX">Support</a>
         </li>
       </ul>
     </nav>
