--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
       alt="Crypto Tech Hero Image"
       class="img-landing-hero"
     />
+    <section>
+        <h1>Want to get in on Cryptomarket?</h1>
+    </section>
   </body>
 </html>
