added grid to new section and styling

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       alt="Crypto Tech Hero Image"
       class="img-landing-hero"
     />
-    <img
-      src="./images/iPhone_Blank_Cropped_1280.png"
-      alt="Smartphone with Crypto Market Page"
-      class="img-smartphone-hero"
-    />
 
-    <section>
-        <h1>Want to get in on Cryptomarket?</h1>
+    <section class="section-headline">
+      <h1>Want to get in on Cryptomarket?</h1>
+      <img
+        src="./images/iPhone_Blank_Cropped_1280.png"
+        alt="Smartphone with Crypto Market Page"
+        class="head-item1 img-smartphone-hero"
+      />
     </section>
   </body>
 </html>
