--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     />
 
     <section class="section-headline">
-      <h1>Want to get in on Cryptomarket?</h1>
-      <img
-        src="./images/iPhone_Blank_Cropped_1280.png"
-        alt="Smartphone with Crypto Market Page"
-        class="head-item1 img-smartphone-hero"
-      />
+      <div class="content-headline">
+        <h1>Want to get in on Cryptomarket?</h1>
+        <img
+          src="./images/iPhone_Blank_Cropped_1280.png"
+          alt="Smartphone with Crypto Market Page"
+          class="head-item1 img-smartphone-hero"
+        />
+      </div>
     </section>
   </body>
 </html>
