--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     <section class="section-headline">
       <div class="content-headline">
-        <h1>Want to get in on Cryptomarket?</h1>
+        <h1 class="headline-h1 head-item1">Want to get in on Cryptomarket?</h1>
         <img
           src="./images/iPhone_Blank_Cropped_1280.png"
           alt="Smartphone with Crypto Market Page"
-          class="head-item1 img-smartphone-hero"
+          class="head-item2 img-smartphone-hero"
         />
       </div>
     </section>
