adjusted styling of grid elements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
     <section class="section-headline">
       <div class="content-headline">
-        <h1 class="headline-h1 head-item1">Want to get in on Cryptomarket?</h1>
+        <h1 class="headline-h1 head-item1">
+          Cryptocurrencies such as Bitcoin are growing and becoming more of the
+          norm. So why wait?
+        </h1>
         <img
           src="./images/iPhone_Blank_Cropped_1280.png"
           alt="Smartphone with Crypto Market Page"
