Added features section with lorem

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="section-headline">
       <div class="content-headline">
         <h1 class="headline-h1 head-item1">
-          Cryptocurrencies such as Bitcoin are growing and becoming more of the
-          norm. So why wait?
+          Cryptocurrencies are growing and becoming more of the norm. So why
+          wait?
         </h1>
         <img
           src="./images/iPhone_Blank_Cropped_1280.png"
@@ -42,5 +42,33 @@
       </div>
     </section>
 
+    <section class="section-features">
+      <div class="content-features">
+        <div class="feature-item1">
+          <h1>Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
+            ullam nihil quis
+          </p>
+        </div>
+        <div class="feature-item2">
+          <h1>Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
+            ullam nihil quis
+          </p>
+        </div>
+        <div class="feature-item3">
+          <h1>Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
+            ullam nihil quis
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
