--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="section-features">
       <div class="content-features">
         <div class="feature-item1">
-          <h1>Features</h1>
+          <h1 class="feature-h1">Features</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
             earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="feature-item2">
-          <h1>Features</h1>
+          <h1 class="feature-h1">Features</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
             earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="feature-item3">
-          <h1>Features</h1>
+          <h1 class="feature-h1">Features</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
             earum, voluptates quos obcaecati libero rem? Totam ut officia ipsum
